同步配置文件

--- a/SwebTest/data.properties
+++ b/SwebTest/data.properties
@@ -21,15 +21,16 @@ USERNAME_SUPPORT = support
 PASSWORD_SUPPORT = iyeastar
 #AMI的log存放，请不要修改
 RETRY_COUNT = 0
+
 AMI_LOG_FILE = AMI_log.txt
 #================辅助设备信息设置=====================
 
 #用于注册sip/iax trunk
-DEVICE_ASSIST_1 = 192.168.12.217
+DEVICE_ASSIST_1 = 192.168.3.235
 #用于注册sps /spx trunk
-DEVICE_ASSIST_2 = 192.168.12.216
+DEVICE_ASSIST_2 = 192.168.3.236
 #用于注册account trunk
-DEVICE_ASSIST_3 = 192.168.12.218
+DEVICE_ASSIST_3 = 192.168.3.218
 UDP_PORT_ASSIST_1 = 5060
 UDP_PORT_ASSIST_2 = 5060
 UDP_PORT_ASSIST_3 = 5060
@@ -45,21 +46,23 @@ LOGIN_ADMIN = yes
 #被测设备产品名称命名  CloudPBX  PC  S100  S300  S412  S20  S50
 PRODUCT = S300
 #主测设备的版本号
-VERSION = 30.10.0.16
+VERSION = 30.11.99.99.99
 
 #设置测试的浏览器：chrome、firefox、ie ；网页传输协议和端口号；Cloud默认端口号值为443
 BROWSER = chrome
 URL = https
 DEVICE_PORT = 8088
-DEVICE_IP_LAN = 192.168.12.212
-DEVICE_IP_WAN = 192.168.105.230
+DEVICE_IP_LAN = 192.168.11.199
+DEVICE_IP_WAN = 192.168.11.230
 DEVICE_IP_SUBNETMASK = 255.255.255.0
-DEVICE_IP_GATEWAY = 192.168.105.1
+DEVICE_IP_GATEWAY = 192.168.11.1
 DEVICE_IP_DNS = 192.168.1.1
 UDP_PORT = 5060
 TCP_PORT = 5060
 TLS_PORT = 5061
 
+#HTTP服务器路径，用于下载镜像
+HTTP_SERVER_IMAGE = http://192.168.11.195:1234//30.11.99.99.99.bin
 #火狐浏览器安装路径：根据自己电脑的火狐安装路径（自动化测试默认是使用谷歌浏览器，如果没有要求要用火狐测试，这个可不用修改）
 FIREFOX_PATH = D:\\Program Files (x86)\\Mozilla Firefox\\firefox.exe
 
@@ -76,12 +79,12 @@ SPX = SPX1
 ACCOUNTTRUNK = null
 
 #物理外线，都与辅助设备2对接，填的值看设备中继页面的name，如果物理外线不测试，将相应的值设置为null，PC或CloudPBX值必须设为null
-BRI_1 = BRI2-7
-BRI_2 = BRI2-8
-FXS_1 = 2-1
+BRI_1 = null
+BRI_2 = null
+FXS_1 = null
 #FXS_2 = 3-2
-FXO_1 = FXO2-5
-E1 = DIGIT3
+FXO_1 = null
+E1 = null
 GSM = null
 #被测设备的手机号
 DEVICE_TEST_GSM = 18450023994
