update admin password

--- a/SwebTest/data.properties
+++ b/SwebTest/data.properties
@@ -47,7 +47,8 @@ DEVICE_ASSIST_GSM = 18559230512
 #=================被测设备信息设置======================
 #网页登录用户名、密码
 LOGIN_USERNAME = admin
-LOGIN_PASSWORD = password
+#LOGIN_PASSWORD = password
+LOGIN_PASSWORD = esi789*#
 #yes表示用admin权限的账户登入，no表示分机登入
 LOGIN_ADMIN = yes
 #被测设备产品名称命名  CloudPBX  PC  S100  S300  S412  S20  S50
