--- a/SwebTest/pom.xml
+++ b/SwebTest/pom.xml
@@ -56,7 +56,7 @@
                         <systemProperties>
                             <property>
                                 <name>allure.results.directory</name>
-                                <value>./target/allure-results</value>
+                                <value>./SwebTest/target/allure-results</value>
                             </property>
                             <!--<property>-->
                             <!--<name>allure.link.issue.pattern</name>-->
