--- a/SwebTest/pom.xml
+++ b/SwebTest/pom.xml
@@ -20,52 +20,78 @@
 
 
     <build>
+
+        <resources>
+             <resource>
+                 <directory>src/main/resources</directory>
+                 <includes>
+                     <include>**/*.properties</include>
+                     <include>**/*.dll</include>
+                 </includes>
+                 <filtering>false</filtering>
+             </resource>
+<!--            <test data properties>-->
+            <resource>
+                <directory>src/test/resources</directory>
+                <includes>
+                    <include>**/*.properties</include>
+                </includes>
+                <filtering>false</filtering>
+            </resource>
+
+        </resources>
+
         <plugins>
+            <plugin>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.1</version>
+                <configuration>
+                    <encoding>UTF-8</encoding>
+                    <showWarnings>true</showWarnings>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                    <compilerArguments>
+                        <bootclasspath>${JAVA_HOME}/jre/lib/rt.jar</bootclasspath>
+                    </compilerArguments>
+                </configuration>
+            </plugin>
+
+
+            <!--allure report-->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.20.1</version>
                 <configuration>
+                    <forkMode>once</forkMode>
                     <suiteXmlFiles>
-                        <!--<suiteXmlFile>suite/smokecase/pbxcore.xml</suiteXmlFile>-->
-                        <!--<suiteXmlFile>suite/smokecase/syscore.xml</suiteXmlFile>-->
-<!--                        <suiteXmlFile>suite/regression/pbxcore.xml</suiteXmlFile>-->
-                        <!--<suiteXmlFile>suite/detailcase/pbxcore.xml</suiteXmlFile>-->
                         <suiteXmlFile>suite/${suiteXmlFile}</suiteXmlFile>
+                        <!--<testng outputDir="test-output/html/"/>-->
                     </suiteXmlFiles>
-                    <properties>
-                        <!-- No TestNG listeners
+                    <testFailureIgnore>true</testFailureIgnore>
+                    <!--                    <forkMode>once</forkMode>-->
+<!--                    <forkCount>2.0C</forkCount>-->
+<!--                    <parallel>methods</parallel>-->
+<!--                    <threadCount>5</threadCount>-->
+                    <argLine>
+                        -Dfile.encoding=UTF-8 -Xmx1024m -Xms1024m -XX:PermSize=1024 -XX:MaxPermSize=1024
+                        -javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"
+                    </argLine>
+
+                    <workingDirectory>${project.build.directory}</workingDirectory>
+
+                    <!--  让allure-results，在target文件下生成-->
+                    <systemProperties>
                         <property>
-                            <name>userdefaultlisteners</name>
-                            <value>false</value>
-                        </property>-->
-                        <!-- Setting ReportNG listeners-->
-<!--                        <property>-->
-<!--                            <name>listener</name>-->
-<!--                            <value>org.uncommons.reportng.HTMLReporter, org.uncommons.reportng.JUnitXMLReporter</value>-->
-<!--                        </property>-->
-
-                        <argLine>
-                            -Dfile.encoding=UTF-8 -Xmx1024m -Xms1024m -XX:PermSize=1024 -XX:MaxPermSize=1024
-                            -javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"
-                        </argLine>
-
-                        <workingDirectory>${project.build.directory}</workingDirectory>
-
-                        <!--  让allure-results，在tagget文件下生成-->
-                        <systemProperties>
-                            <property>
-                                <name>allure.results.directory</name>
-                                <value>./target/allure-results</value>
-                            </property>
-                            <!--<property>-->
-                            <!--<name>allure.link.issue.pattern</name>-->
-                            <!--<value>https://example.org/issue/{}</value>-->
-                            <!--</property>-->
-                        </systemProperties>
-                    </properties>
+                            <name>allure.results.directory</name>
+                            <value>./allure-results</value>
+                        </property>
+                        <!--<property>-->
+                        <!--<name>allure.link.issue.pattern</name>-->
+                        <!--<value>https://example.org/issue/{}</value>-->
+                        <!--</property>-->
+                    </systemProperties>
                 </configuration>
-
                 <dependencies>
                     <dependency>
                         <groupId>org.aspectj</groupId>
@@ -74,26 +100,7 @@
                     </dependency>
                 </dependencies>
             </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <configuration>
-                    <source>1.7</source>
-                    <target>1.7</target>
-                    <encoding>utf8</encoding>
-                    <compilerArgs>
-                        <!-- 过期的方法的警告-->
-                        <arg>-Xlint:deprecation</arg>
-                    </compilerArgs>
-                    <compilerArguments>
-                        <!-- 是否输出所有的编译信息（包括类的加载等）-->
-                        <!--<verbose />-->
-                        <!-- 解决maven命令编译报错，因为rt.jar 和jce.jar在jre的lib下面，不在jdk的lib下面，
-                        导致maven找不到（java7以后会出现这个问题），将这2个jar包拷贝到jdk的lib下面估计也好使-->
-                        <bootclasspath>${java.home}/lib/rt.jar${path.separator}${java.home}/lib/jce.jar</bootclasspath>
-                    </compilerArguments>
-                </configuration>
-            </plugin>
+
         </plugins>
     </build>
 
@@ -170,13 +177,13 @@
             <version>2.6.12.1</version>
         </dependency>
 
-        <dependency>
-            <groupId>reportng</groupId>
-            <artifactId>reportng</artifactId>
-            <version>1.1.5s</version>
-            <scope>system</scope>
-            <systemPath>${project.basedir}/libs/reportng-1.1.5s.jar</systemPath>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>reportng</groupId>-->
+<!--            <artifactId>reportng</artifactId>-->
+<!--            <version>1.1.5s</version>-->
+<!--            <scope>system</scope>-->
+<!--            <systemPath>${project.basedir}/libs/reportng-1.1.5s.jar</systemPath>-->
+<!--        </dependency>-->
 
         <!-- https://mvnrepository.com/artifact/velocity/velocity-dep -->
         <dependency>
