--- a/SwebTest/pom.xml
+++ b/SwebTest/pom.xml
@@ -220,6 +220,12 @@
             <version>262</version>
         </dependency>
 
+<!--        <dependency>-->
+<!--            <groupId>net.java.dev.jna</groupId>-->
+<!--            <artifactId>jna</artifactId>-->
+<!--            <version>4.1.0</version>-->
+<!--        </dependency>-->
+
     </dependencies>
 
 </project>
