--- a/SwebTest/src/test/resources/data.properties
+++ b/SwebTest/src/test/resources/data.properties
@@ -108,7 +108,8 @@ NETWORK_DEVICE_USER_PASSWORD =
 #录音存储设置：sharetest1、TF/SD、USB、HD
 DEVICE_RECORD_NAME = null
 
-
+#重跑次数
+maxRunCount=2
 
 ##=================3.230---S50----=========================
 ##网页登录用户名、密码
