--- a/SwebTest/pom.xml
+++ b/SwebTest/pom.xml
@@ -220,11 +220,11 @@
             <version>262</version>
         </dependency>
 
-<!--        <dependency>-->
-<!--            <groupId>net.java.dev.jna</groupId>-->
-<!--            <artifactId>jna</artifactId>-->
-<!--            <version>4.1.0</version>-->
-<!--        </dependency>-->
+        <dependency>
+            <groupId>net.java.dev.jna</groupId>
+            <artifactId>jna</artifactId>
+            <version>4.1.0</version>
+        </dependency>
 
     </dependencies>
 
