--- a/SwebTest/pom.xml
+++ b/SwebTest/pom.xml
@@ -26,8 +26,9 @@
                  <directory>src/main/resources</directory>
                  <includes>
                      <include>**/*.properties</include>
-<!--                     <include>**/*.dll</include>-->
+                     <include>**/*.dll</include>
                      <include>**/*.so</include>
+                     <include>**/*.2</include>
                  </includes>
                  <filtering>false</filtering>
              </resource>
