--- a/SwebTest/pom.xml
+++ b/SwebTest/pom.xml
@@ -28,6 +28,7 @@
                      <include>**/*.properties</include>
                      <include>**/*.dll</include>
                      <include>**/*.so</include>
+                     <include>**/*.2</include>
                  </includes>
                  <filtering>false</filtering>
              </resource>
