--- a/SwebTest/data.properties
+++ b/SwebTest/data.properties
@@ -30,6 +30,8 @@ IS_RUN_REMOTE_SERVER = true
 GRID_HUB_IP = 192.168.5.150
 GRID_HUB_PORT = 4444
 
+maxRunCount=2
+
 #================辅助设备信息设置=====================
 
 #用于注册sip/iax trunk
