modify parallel count to 1

--- a/SwebTest/data.properties
+++ b/SwebTest/data.properties
@@ -34,7 +34,7 @@ GRID_HUB_PORT = 4444
 #================辅助设备信息设置=====================
 
 #用于注册sip/iax trunk
-DEVICE_ASSIST_1 = 192.168.3.121
+DEVICE_ASSIST_1 = 192.168.3.123
 #用于注册sps /spx trunk
 DEVICE_ASSIST_2 = 192.168.3.122
 #用于注册account trunk
@@ -48,8 +48,8 @@ DEVICE_ASSIST_GSM = 18559230512
 #=================被测设备信息设置======================
 #网页登录用户名、密码
 LOGIN_USERNAME = admin
-#LOGIN_PASSWORD = password
-LOGIN_PASSWORD = esi789*#
+LOGIN_PASSWORD = password
+#LOGIN_PASSWORD = esi789*#
 #yes表示用admin权限的账户登入，no表示分机登入
 LOGIN_ADMIN = yes
 #被测设备产品名称命名  CloudPBX  PC  S100  S300  S412  S20  S50
@@ -61,7 +61,7 @@ VERSION = 30.11.99.99.99
 BROWSER = chrome
 URL = https
 DEVICE_PORT = 8088
-DEVICE_IP_LAN = 192.168.3.123
+DEVICE_IP_LAN = 192.168.3.121
 DEVICE_IP_WAN = 192.168.11.230
 DEVICE_IP_SUBNETMASK = 255.255.255.0
 DEVICE_IP_GATEWAY = 192.168.11.1
