modify parallel count to 1

--- a/SwebTest/pom.xml
+++ b/SwebTest/pom.xml
@@ -70,7 +70,9 @@
 <!--                    关闭并发-->
                     <forkMode>once</forkMode>
                     <suiteXmlFiles>
-                        <suiteXmlFile>${suiteXmlFile}</suiteXmlFile>
+                        <suiteXmlFile>suite/demo.xml</suiteXmlFile>
+
+                        <!--                        <suiteXmlFile>suite/${suiteXmlFile}</suiteXmlFile>-->
                         <!--<testng outputDir="test-output/html/"/>-->
                     </suiteXmlFiles>
                     <testFailureIgnore>true</testFailureIgnore>
