modify parallel count to 1

--- a/SwebTest/data.properties
+++ b/SwebTest/data.properties
@@ -1,3 +1,5 @@
+# 用例失败的重跑次数
+maxRunCount=2
 #====================================以下信息请根据实际被测环境设置相关信息===============================
 #=================================================以下信息请不要修改===========================================================================================
 #谷歌浏览器驱动程序路径--请不要修改
