--- a/SwebTest/data.properties
+++ b/SwebTest/data.properties
@@ -36,7 +36,7 @@ GRID_HUB_PORT = 4444
 #================辅助设备信息设置=====================
 
 #用于注册sip/iax trunk
-DEVICE_ASSIST_1 = 192.168.3.123
+DEVICE_ASSIST_1 = 192.168.3.125
 #用于注册sps /spx trunk
 DEVICE_ASSIST_2 = 192.168.3.122
 #用于注册account trunk
@@ -90,15 +90,16 @@ SPX = SPX1
 ACCOUNTTRUNK = null
 
 #物理外线，都与辅助设备2对接，填的值看设备中继页面的name，如果物理外线不测试，将相应的值设置为null，PC或CloudPBX值必须设为null
-BRI_1 = null
-BRI_2 = null
-FXS_1 = null
+BRI_1 = BRI2-7
+BRI_2 = BRI2-8
+FXS_1 = 2-5
 #FXS_2 = 3-2
-FXO_1 = null
-E1 = null
+FXO_1 = FXO1-3
+E1 = GIGIT3
 GSM = null
 #被测设备的手机号
-DEVICE_TEST_GSM = 18450023994
+DEVICE_TEST_GSM = null
+#DEVICE_TEST_GSM = 18450023994
 
 #网络磁盘设置--由于网络磁盘创建时网页传递给后台的参数是递增的，所以自动化执行时无法判断出是第几个建立的；可通过df查看是第几个，如果设备之前未创建过网络磁盘，则可以正常设置；
 #建议测试录音时使用外接存储设备，将NETWORK_DEVICE_NAME设置为“null”
