--- a/SwebTest/src/main/resources/data.properties
+++ b/SwebTest/src/main/resources/data.properties
@@ -1,124 +1,324 @@
 # 用例失败的重跑次数
 maxRunCount=2
+#====================================以下信息请根据实际被测环境设置相关信息===============================
+#=================================================以下信息请不要修改===========================================================================================
+#谷歌浏览器驱动程序路径--请不要修改
+CHROME_PATH = src\\main\\resources\\driver\\chrome\\chromedriver.exe
+#错误截图保存路径--请不要修改
+SCREENSHOT_PATH = pic\\
+#导入导出文件保存路径--请不要修改
+EXPORT_PATH = exportFile\\
+EXPORT_PATH1 = exportFile\\11\\
+#导入文件设置--请不要修改
+IMPORT_EXTENSION = extension.csv
+#本地log输出文件名--请不要修改
+LOCAL_LOG_FILE =local_log.txt
+#冒烟有测试到，上传提示音--请不要修改
+VOICEPACKAGE_NAME =sound-zh-1.0.12.tar
+SYSTEM_PROMPT_LANGUAGE = Language: zh
+#SSH 用户密码设置，root账户默认设置为空--暂时没有用到，请不要修改
+SSH_PORT = 8022
+USERNAEM_LS = ls@yf
+USERNAME_SUPPORT = support
+PASSWORD_SUPPORT = iyeastar
+#AMI的log存放，请不要修改
+RETRY_COUNT = 0
 
-# 被测设备的产品型号（S20/S50/S100/S300/CloudPBX/PC）
-    product = S300;
+AMI_LOG_FILE = AMI_log.txt
 
-# 被测手机、辅助手机相关信息
-    linkus_ver = 2.1.9
-# 填上个发布版本的versionCode值。用于aapt dump badging检查versionCode与上个发布版本不一致（一样则后期无法上架）
-    androidVersionCode = 80 
-#安卓apk路径
-    androidApkPath = F:/tftp/linkus_android-2.1.9.apk
-    # 被测手机联系人信息
-    linkusA_contactName = Test1
-    linkusA_contactMobileNum = 123456
-    linkusA_contactWorkNum = 654321
-    linkusA_contactHomeNum = 456789
-    linkusA_contactWorkFax = 987654
-    linkusA_contactHomeFax = 123456789
-    linkusA_contactOtherNum = 987654321
 
-# 被测设备相关信息
-    # 基本信息
-    localAddress = 192.168.11.195
-    localPort = 8111
-    externalAddress = 192.168.11.197
-    externalPort = 5060
-    assistAddress = 192.168.11.197
-    assistPort = 5060
-    udpPort = 5060
-    tcpPort = 5060
-    tlsPort = 5061
-    sshPort = 8022
-    amiPort = 5039
-    # 截图保存地址
-    screenShotPath = linkus_test\\pic\\
-    # 特殊目的地
-    ringGroupNum = 6200
-    intercomNum = 6300
-    conferenceNum = 6400
-    conferencePassword = 0123456789
-    ivrNum = 6500
-    ivrKeyPressEvent = 1
-    queueNum = 6700
+#Grid hub 服务地址
+IS_RUN_REMOTE_SERVER = true
+GRID_HUB_IP = 192.168.5.150
+GRID_HUB_PORT = 4444
 
-# 分机通用信息
-    udpProtocol = udp
-    tcpProtocol = tcp
-    tlsProtocol = tls
-    registPassword = Yeastar202
-    loginPassword = Yeastar123
 
-# 被测linkus A信息
-    linkusA_udid = TWHU49UCTCL7UWMV
-    linkusA_androidVer = 6.0
-    linkusA_appiumPort = 4725
-    linkusA_name = 1000
-    linkusA_num = 1000
-    linkusA_phoneNum = 12345678901
-    linkusA_emailAddress = lhr@yeastar.com
+#================辅助设备信息设置=====================
 
-# 辅助linkusB分机相关信息
-    linkusB_udid = c184c2d2
-    linkusB_androidVer = 4.4
-    linkusB_appiumPort = 4727
-    linkusB_name = 1001
-    linkusB_num = 1001
-    linkusB_phoneNum = 13145678913
-    linkusB_emailAddress = xlq@yeastar.com
+#用于注册sip/iax trunk
+DEVICE_ASSIST_1 = 192.168.3.125
+#用于注册sps /spx trunk
+DEVICE_ASSIST_2 = 192.168.3.123
+#用于注册account trunk
+DEVICE_ASSIST_3 = 192.168.3.124
+UDP_PORT_ASSIST_1 = 5060
+UDP_PORT_ASSIST_2 = 5060
+UDP_PORT_ASSIST_3 = 5060
+#辅助2对应的手机号
+DEVICE_ASSIST_GSM = 18559230512
 
-#总是转移到语音留言
-    linkusC_num = 1003
-    linkusC_Password = Yeastar202
-    linkusC_name = 1003
+#=================被测设备信息设置======================
+#网页登录用户名、密码
+LOGIN_USERNAME = admin
+LOGIN_PASSWORD = password
+#LOGIN_PASSWORD = esi789*#
+#yes表示用admin权限的账户登入，no表示分机登入
+LOGIN_ADMIN = yes
+#被测设备产品名称命名  CloudPBX  PC  S100  S300  S412  S20  S50
+PRODUCT = S300
+#主测设备的版本号
+VERSION = 30.13.0.15
 
-#辅助设备上的分机,用于外线打到主测设备
-    linkusD_num = 2000
-    linkusD_Password = Yeastar202Yeastar202
-    linkusD_name = 2000
+#设置测试的浏览器：chrome、firefox、ie ；网页传输协议和端口号；Cloud默认端口号值为443
+BROWSER = chrome
+URL = https
+DEVICE_PORT = 8088
+DEVICE_IP_LAN = 192.168.3.121
+DEVICE_IP_WAN = 192.168.11.230
+DEVICE_IP_SUBNETMASK = 255.255.255.0
+DEVICE_IP_GATEWAY = 192.168.11.1
+DEVICE_IP_DNS = 192.168.3.1
+UDP_PORT = 5060
+TCP_PORT = 5060
+TLS_PORT = 5061
 
-# 被测设备其他辅助分机号码
-    extensionS02_num = 1002  
-    extensionS03_num = 1003
-    extensionS04_num = 1004
-    extensionS05_num = 1005
-    extensionS06_num = 1006
-    extensionS07_num = 1007
-    extensionS08_num = 1008
-    extensionS09_num = 1009
+#HTTP服务器路径，用于下载镜像
+HTTP_SERVER_IMAGE = http://192.168.11.195:1234//30.11.99.99.99.bin
+#火狐浏览器安装路径：根据自己电脑的火狐安装路径（自动化测试默认是使用谷歌浏览器，如果没有要求要用火狐测试，这个可不用修改）
+FIREFOX_PATH = D:\\Program Files (x86)\\Mozilla Firefox\\firefox.exe
 
-# 被测设备中继名称
-    sipTrunk = sip_test
-    sipTrunkPrefix = 9
-    iaxTrunk = iax_test
-    iaxTrunkPrefix = 8
-    gsmTrunk = gsm_test
-    gsmSimNum = 18888888888
-    gsmTrunkPrefix = 7
-    pstnTrunk = pstn_test
-    pstnTrunkPrefix = 6
-    e1Trunk = e1_test
-    e1TrunkPrefix = 5
-    briTrunk = bri_test
-    briTrunkPrefix = 4
-    spsTrunk = SPS1
-    spsTrunkPrefix = 3
-    spxTrunk = spx_test
-    spxTrunkPrefix = 2
+#AMI设置--Cloud需手动启用
+DEVICE_AMI_IP = 192.168.105.234
+AMI_PORT = 5038
 
-# 辅助设备S1相关信息
-    localAddressS1 = 192.168.11.163
-    externalAddressS1 = 192.168.11.163
-    externalPortS1 = 8111
-    gsmSimNumS1 = null
-    extensionS10_num = 2000
-    extensionS11_num = 2001
-    extensionS12_num = 2002
+#VoIP线路名称自定义--可不修改，如果对应的外线不测试，将对应的名字设置为null；sip trunk 和sps trunk必须存在
+SIPTRUNK = SIP1
+SIPTRUNK2 = SIP2
+IAXTRUNK = IAX1
+SPS = SPS1
+SPX = SPX1
+ACCOUNTTRUNK = null
 
-# 辅助设备S2相关信息
-    localAddressS2 = 192.168.11.165
-    externalAddressS2 = null
-    externalPortS2 = null
-    extensionS20=3000
+#物理外线，都与辅助设备2对接，填的值看设备中继页面的name，如果物理外线不测试，将相应的值设置为null，PC或CloudPBX值必须设为null
+BRI_1 = BRI2-7
+BRI_2 = BRI2-8
+FXS_1 = 2-5
+#FXS_2 = 3-2
+FXO_1 = FXO1-3
+E1 = GIGIT3
+GSM = null
+#被测设备的手机号
+DEVICE_TEST_GSM = null
+#DEVICE_TEST_GSM = 18450023994
 
+#网络磁盘设置--由于网络磁盘创建时网页传递给后台的参数是递增的，所以自动化执行时无法判断出是第几个建立的；可通过df查看是第几个，如果设备之前未创建过网络磁盘，则可以正常设置；
+#建议测试录音时使用外接存储设备，将NETWORK_DEVICE_NAME设置为“null”
+NETWORK_DEVICE_NAME = networkDevice
+NETWORK_DEVICE_IP = 192.168.3.5
+NETWORK_DEVICE_SHARE_NAME = record
+NETWORK_DEVICE_USER_NAME =
+NETWORK_DEVICE_USER_PASSWORD =
+
+#录音存储设置：sharetest1、TF/SD、USB、HD
+DEVICE_RECORD_NAME = null
+
+
+
+##=================3.230---S50----=========================
+##网页登录用户名、密码
+#LOGIN_USERNAME = admin
+#LOGIN_PASSWORD = password
+#RETRY_COUNT = 0
+#PRODUCT = S50
+#VERSION = 30.5.0.32
+##设置测试的浏览器：chrome、firefox、ie
+#BROWSER = chrome
+##BROWSER = firefox
+##BROWSER = ie
+#URL = https
+#
+##SSH 用户密码设置，root账户默认设置为空
+#SSH_PORT = 8022
+#USERNAEM_LS = ls@yf
+#USERNAME_SUPPORT = support
+#PASSWORD_SUPPORT = iyeastar
+#VOICEPACKAGE_NAME =sound-zh-1.0.12.tar
+#SYSTEM_PROMPT_LANGUAGE = Language: zh
+#DEVICE_IP_LAN = 192.168.3.230
+#DEVICE_IP_WAN = 192.168.3.231
+#DEVICE_IP_SUBNETMASK = 255.255.255.0
+#DEVICE_IP_GATEWAY = 192.168.3.1
+#DEVICE_IP_DNS = 192.168.1.1
+#DEVICE_PORT = 8088
+#UDP_PORT = 5060
+#TCP_PORT = 5060
+#TLS_PORT = 5061
+#UDP_PORT_ASSIST_1 = 5060
+#UDP_PORT_ASSIST_2 = 5060
+#AMI_PORT = 5038
+#
+##用于注册sip/iax trunk
+#DEVICE_ASSIST_1 = 192.168.3.235
+##用于注册sps /spx trunk
+#DEVICE_ASSIST_2 = 192.168.3.236
+#DEVICE_ASSIST_GSM = 18506938857
+#DEVICE_TEST_GSM = 18450024021
+##VoIP线路名称自定义--可不修改
+#SIPTRUNK = SIP1
+#IAXTRUNK = IAX1
+#SPS = SPS1
+#SPX = SPX1
+##物理外线，都与辅助设备2对接，PC或CloudPBX值必须设为空
+#BRI_1 = BRI3
+#BRI_2 = BRI4
+#FXS_1 = 1-1
+##FXS_2 = 3-2
+#FXO_1 = FXO5
+##FXO_2 = FXO2-4
+#GSM =  GSM7
+#E1 = null
+#
+##网络磁盘设置,名字必须为netdisk-1,1表示第几次创建的网络磁盘，若之前已经创建过磁盘，对应的数字必须根据df查询到的修改
+#NETWORK_DEVICE_NAME = netdisk1
+#NETWORK_DEVICE_IP = 192.168.3.4
+#NETWORK_DEVICE_SHARE_NAME = record
+#NETWORK_DEVICE_USER_NAME =
+#NETWORK_DEVICE_USER_PASSWORD =
+##录音存储设置：sharetest1、TF/SD、USB、HD
+#DEVICE_RECORD_NAME = TF/SD
+##导入文件设置
+#IMPORT_EXTENSION = extension.csv
+
+#========================cloudPBX===========================================
+#网页登录用户名、密码
+#LOGIN_USERNAME = cecilia@yeastar.com
+#LOGIN_PASSWORD = Yeastar202
+#yes表示用admin权限的账户登入，no表示分机登入
+#LOGIN_ADMIN = yes
+#产品名称命名  CloudPBX  PC  S100  S300  S412  S20  S50
+#PRODUCT = CloudPBX
+#VERSION = 81.7.0.12
+#设置测试的浏览器：chrome、firefox、ie
+#BROWSER = chrome
+#BROWSER = firefox
+#BROWSER = ie
+#URL = https
+
+#SSH 用户密码设置，root账户默认设置为空
+#SSH_PORT = 11622
+#USERNAEM_LS = root
+#USERNAME_SUPPORT = support
+#PASSWORD_SUPPORT = iyeastar
+#
+#VOICEPACKAGE_NAME =sound-zh-1.0.12.tar
+#SYSTEM_PROMPT_LANGUAGE = Language: zh
+#
+#DEVICE_IP_LAN = auto.isbc.yeastarcloud.com
+#DEVICE_IP_WAN = null
+#DEVICE_IP_SUBNETMASK = null
+#DEVICE_IP_GATEWAY = null
+#DEVICE_IP_DNS = null
+#DEVICE_PORT = 443
+#UDP_PORT = 5060
+#TCP_PORT = 5060
+#TLS_PORT = 5061
+#UDP_PORT_ASSIST_2 = 5060
+#UDP_PORT_ASSIST_1 = 5060
+#UDP_PORT_ASSIST_3 = 5060
+#AMI_PORT = 2338
+#DEVICE_AMI_IP = 47.96.185.223
+
+#用于注册sps /spx trunk
+#DEVICE_ASSIST_2 = cyt.cn1.yeastarcloud.com
+#用于注册sip/iax trunk
+#DEVICE_ASSIST_1 = cyt.isbcxyy.yeastarcloud.com
+#DEVICE_ASSIST_GSM = null
+#DEVICE_TEST_GSM = null
+#DEVICE_ASSIST_3 = 192.168.2.125
+#VoIP线路名称自定义--可不修改
+#SIPTRUNK = SIP1
+#IAXTRUNK = IAX1
+#SIPTRUNK2 = SIP2
+#ACCOUNTTRUNK = Account1
+#SPS = SPS1
+#SPX = SPX1
+#物理外线，都与辅助设备2对接，PC或CloudPBX值必须设为null
+#BRI_1 = null
+#BRI_2 = null
+#FXS_1 = null
+#FXS_2 = null
+#FXO_1 = null
+#FXO_2 = null
+#GSM =  null
+#E1 = null
+
+##网络磁盘设置,名字必须为netdisk-1,1表示第几次创建的网络磁盘，若之前已经创建过磁盘，对应的数字必须根据df查询到的修改
+#NETWORK_DEVICE_NAME = netdisk1
+#NETWORK_DEVICE_IP = 192.168.3.4
+#NETWORK_DEVICE_SHARE_NAME = record
+#NETWORK_DEVICE_USER_NAME =
+#NETWORK_DEVICE_USER_PASSWORD =
+##录音存储设置：sharetest1、TF/SD、USB、HD
+#DEVICE_RECORD_NAME = TF/SD
+##导入文件设置
+#IMPORT_EXTENSION = extensionPC.csv
+##重跑次数
+#RETRY_COUNT=0
+###本地log输出文件名
+#LOCAL_LOG_FILE =local_log.txt
+
+###==============================  PC  ===============================
+##网页登录用户名、密码
+#LOGIN_USERNAME = admin
+#LOGIN_PASSWORD = password
+#RETRY_COUNT = 0
+#PRODUCT = PC
+#VERSION = 30.5.0.24
+##设置测试的浏览器：chrome、firefox、ie
+#BROWSER = chrome
+##BROWSER = firefox
+##BROWSER = ie
+#URL = https
+#
+##SSH 用户密码设置，root账户默认设置为空
+#SSH_PORT = 8022
+#USERNAEM_LS = ls@yf
+#USERNAME_SUPPORT = support
+#PASSWORD_SUPPORT = iyeastar
+#VOICEPACKAGE_NAME =sound-zh-1.0.12.tar
+#SYSTEM_PROMPT_LANGUAGE = Language: zh
+#DEVICE_IP_LAN = 192.168.11.20
+#DEVICE_IP_WAN = 192.168.3.230
+#DEVICE_IP_SUBNETMASK = 255.255.255.0
+#DEVICE_IP_GATEWAY = 192.168.3.1
+#DEVICE_IP_DNS = 192.168.1.1
+#DEVICE_PORT = 8088
+#UDP_PORT = 5060
+#TCP_PORT = 5060
+#TLS_PORT = 5061
+#UDP_PORT_ASSIST_1 = 5060
+#UDP_PORT_ASSIST_2 = 5060
+#AMI_PORT = 5038
+#
+##用于注册sip/iax trunk
+#DEVICE_ASSIST_1 = 192.168.3.235
+##用于注册sps /spx trunk
+#DEVICE_ASSIST_2 = 192.168.3.236
+#DEVICE_ASSIST_GSM = 18506938857
+#DEVICE_TEST_GSM = 18450024021
+##VoIP线路名称自定义--可不修改
+#SIPTRUNK = SIP1
+#IAXTRUNK = IAX1
+#SPS = SPS1
+#SPX = SPX1
+##物理外线，都与辅助设备2对接，PC或CloudPBX值必须设为空
+#BRI_1 = null
+#BRI_2 = null
+#FXS_1 = null
+##FXS_2 = 3-2
+#FXO_1 = null
+##FXO_2 = FXO2-4
+#GSM =  null
+#E1 = null
+#
+##网络磁盘设置,名字必须为netdisk-1,1表示第几次创建的网络磁盘，若之前已经创建过磁盘，对应的数字必须根据df查询到的修改
+#NETWORK_DEVICE_NAME = netdisk1
+#NETWORK_DEVICE_IP = 192.168.3.4
+#NETWORK_DEVICE_SHARE_NAME = record
+#NETWORK_DEVICE_USER_NAME =
+#NETWORK_DEVICE_USER_PASSWORD =
+##录音存储设置：sharetest1、TF/SD、USB、HD
+#DEVICE_RECORD_NAME = Local
+#
+##导入文件设置
+#IMPORT_EXTENSION = extension.csv
