--- a/SwebTest/src/test/resources/data.properties
+++ b/SwebTest/src/test/resources/data.properties
@@ -90,7 +90,7 @@ ACCOUNTTRUNK = null
 #物理外线，都与辅助设备2对接，填的值看设备中继页面的name，如果物理外线不测试，将相应的值设置为null，PC或CloudPBX值必须设为null
 BRI_1 = null
 BRI_2 = null
-FXS_1 = null
+FXS_1 = 2-5
 #FXS_2 = 3-2
 FXO_1 = null
 E1 = null
