--- a/SwebTest/data.properties
+++ b/SwebTest/data.properties
@@ -1,5 +1,3 @@
-# 用例失败的重跑次数
-maxRunCount=2
 #====================================以下信息请根据实际被测环境设置相关信息===============================
 #=================================================以下信息请不要修改===========================================================================================
 #谷歌浏览器驱动程序路径--请不要修改
@@ -91,19 +89,18 @@ ACCOUNTTRUNK = null
 
 #物理外线，都与辅助设备2对接，填的值看设备中继页面的name，如果物理外线不测试，将相应的值设置为null，PC或CloudPBX值必须设为null
 BRI_1 = BRI2-7
-BRI_2 = BRI2-8
+BRI_2 = null
 FXS_1 = 2-5
 #FXS_2 = 3-2
 FXO_1 = FXO1-3
-E1 = GIGIT3
+E1 = DIGIT3
 GSM = null
 #被测设备的手机号
-DEVICE_TEST_GSM = null
-#DEVICE_TEST_GSM = 18450023994
+DEVICE_TEST_GSM = 18450023994
 
 #网络磁盘设置--由于网络磁盘创建时网页传递给后台的参数是递增的，所以自动化执行时无法判断出是第几个建立的；可通过df查看是第几个，如果设备之前未创建过网络磁盘，则可以正常设置；
 #建议测试录音时使用外接存储设备，将NETWORK_DEVICE_NAME设置为“null”
-NETWORK_DEVICE_NAME = networkDevice
+NETWORK_DEVICE_NAME = null
 NETWORK_DEVICE_IP = 192.168.3.5
 NETWORK_DEVICE_SHARE_NAME = record
 NETWORK_DEVICE_USER_NAME =
