--- a/SwebTest/pom.xml
+++ b/SwebTest/pom.xml
@@ -80,7 +80,7 @@
 <!--                    <parallel>methods</parallel>-->
 <!--                    <threadCount>5</threadCount>-->
                     <argLine>
-                        -Dfile.encoding=UTF-8 -Xmx1024m -XX:PermSize=256m -XX:MaxPermSize=256m
+                        -Dfile.encoding=UTF-8 -XX:PermSize=256m -XX:MaxPermSize=256m
                         -javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"
                     </argLine>
 
