--- a/SwebTest/data.properties
+++ b/SwebTest/data.properties
@@ -96,7 +96,7 @@ FXO_1 = FXO1-3
 E1 = DIGIT3
 GSM = null
 #被测设备的手机号
-DEVICE_TEST_GSM = 18450023994
+DEVICE_TEST_GSM = null
 
 #网络磁盘设置--由于网络磁盘创建时网页传递给后台的参数是递增的，所以自动化执行时无法判断出是第几个建立的；可通过df查看是第几个，如果设备之前未创建过网络磁盘，则可以正常设置；
 #建议测试录音时使用外接存储设备，将NETWORK_DEVICE_NAME设置为“null”
