--- a/SwebTest/src/test/resources/data.properties
+++ b/SwebTest/src/test/resources/data.properties
@@ -26,7 +26,7 @@ AMI_LOG_FILE = AMI_log.txt
 
 
 #Grid hub 服务地址
-IS_RUN_REMOTE_SERVER = false
+IS_RUN_REMOTE_SERVER = true
 GRID_HUB_IP = 192.168.5.150
 GRID_HUB_PORT = 4444
 
