--- a/SwebTest/pom.xml
+++ b/SwebTest/pom.xml
@@ -237,6 +237,14 @@
             <version>1.1</version>
         </dependency>
 
+
+
+        <dependency>
+            <groupId>com.jcraft</groupId>
+            <artifactId>jsch</artifactId>
+            <version>0.1.54</version>
+        </dependency>
+
     </dependencies>
 
 </project>
