--- a/SwebTest/pom.xml
+++ b/SwebTest/pom.xml
@@ -66,6 +66,7 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.22.2</version>
                 <configuration>
+                    <runOrder>alphabetical</runOrder>
                     <suiteXmlFiles>
                         <suiteXmlFile>suite/${suiteXmlFile}</suiteXmlFile>
                         <!--<testng outputDir="test-output/html/"/>-->0
