--- a/SwebTest/pom.xml
+++ b/SwebTest/pom.xml
@@ -64,8 +64,8 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-<!--               <version>2.22.2</version>-->
-                <version>3.0.0-M4</version>
+               <version>2.22.2</version>
+<!--                <version>3.0.0-M4</version>-->
                 <configuration>
                     <runOrder>alphabetical</runOrder>
                     <suiteXmlFiles>
