--- a/SwebTest/src/test/resources/data.properties
+++ b/SwebTest/src/test/resources/data.properties
@@ -45,10 +45,10 @@ UDP_PORT_ASSIST_3 = 5060
 #辅助2对应的手机号
 DEVICE_ASSIST_GSM = 18559230512
 
-#=================被测设备信息设置======================
+#=================P系列 被测设备信息设置======================
 #网页登录用户名、密码
 LOGIN_USERNAME = admin
-LOGIN_PASSWORD = password
+LOGIN_PASSWORD = Yeastar202
 #LOGIN_PASSWORD = esi789*#
 #yes表示用admin权限的账户登入，no表示分机登入
 LOGIN_ADMIN = yes
@@ -61,7 +61,7 @@ VERSION = 30.13.0.34
 BROWSER = chrome
 URL = https
 DEVICE_PORT = 8088
-DEVICE_IP_LAN = 192.168.3.121
+DEVICE_IP_LAN = 192.168.3.127
 DEVICE_IP_WAN = 192.168.11.230
 DEVICE_IP_SUBNETMASK = 255.255.255.0
 DEVICE_IP_GATEWAY = 192.168.11.1
