--- a/SwebTest/src/main/resources/allure.properties
+++ b/SwebTest/src/main/resources/allure.properties
@@ -1,4 +1,4 @@
 allure.link.issue.pattern=https://www.tapd.cn/32809406/bugtrace/bugs/view?bug_id=113280940600{}&url_cache_key=076cc0a2994812b3964fbe8d70aa08c9
-allure.link.tms.pattern=https://www.tapd.cn/32809406/bugtrace/bugs/view?bug_id=113280940600{}&url_cache_key=076cc0a2994812b3964fbe8d70aa08c9
+allure.link.tms.pattern=https://www.tapd.cn/32809406/sparrow/tcase/tcase_list?category_id=113280940600{}?url_cache_key=4976163087faffe426fc13bcca593961
 
 
