--- a/SwebTest/pom.xml
+++ b/SwebTest/pom.xml
@@ -113,6 +113,12 @@
 
     <dependencies>
 
+        <dependency>
+            <groupId>co.boorse</groupId>
+            <artifactId>selenium-table</artifactId>
+            <version>1.1</version>
+        </dependency>
+
         <!-- import log4j2 jar start -->
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
