add 2 new testcase for extension security

--- a/SwebTest/src/test/resources/data.properties
+++ b/SwebTest/src/test/resources/data.properties
@@ -29,7 +29,8 @@ AMI_LOG_FILE = AMI_log.txt
 #================辅助设备信息设置=====================
 
 #用于注册sip/iax trunk
-DEVICE_ASSIST_1 = 192.168.3.125
+DEVICE_ASSIST_1 = 192.168.3.128
+DEVICE_ASSIST_1_TYPE = SSeries
 #用于注册sps /spx trunk
 DEVICE_ASSIST_2 = 192.168.3.123
 #用于注册account trunk
