1.add 2 new testcase 2.add defaultGroups.xml 3.modify initialDriver

--- a/SwebTest/src/main/resources/data.properties
+++ b/SwebTest/src/main/resources/data.properties
@@ -27,10 +27,10 @@ RETRY_COUNT = 0
 AMI_LOG_FILE = AMI_log.txt
 
 
-#Grid hub 服务地址
-IS_RUN_REMOTE_SERVER = true
-GRID_HUB_IP = 192.168.5.150
-GRID_HUB_PORT = 4444
+##Grid hub 服务地址
+#IS_RUN_REMOTE_SERVER = true
+#GRID_HUB_IP = 192.168.5.150
+#GRID_HUB_PORT = 4444
 
 
 #================辅助设备信息设置=====================
