--- a/SwebTest/pom.xml
+++ b/SwebTest/pom.xml
@@ -29,7 +29,7 @@
                         <version>1.1.1</version>
                         <executions>
                             <execution>
-                                <phase>test</phase>
+<!--                                <phase>test</phase>-->
                                 <goals>
                                     <goal>java</goal>
                                 </goals>
