--- a/SwebTest/pom.xml
+++ b/SwebTest/pom.xml
@@ -195,6 +195,12 @@
     </build>
 
     <dependencies>
+
+        <dependency>
+            <groupId>org.influxdb</groupId>
+            <artifactId>influxdb-java</artifactId>
+            <version>2.19</version>
+        </dependency>
         <!-- for exception [ org/w3c/dom/ElementTraversal ]-->
         <dependency>
             <groupId>xml-apis</groupId>
