--- a/SwebTest/pom.xml
+++ b/SwebTest/pom.xml
@@ -197,6 +197,13 @@
     <dependencies>
 
         <dependency>
+            <groupId>com.sun.mail </groupId>
+            <artifactId>javax.mail </artifactId>
+            <version>1.5.4 </version>
+        </dependency>
+
+
+        <dependency>
             <groupId>org.influxdb</groupId>
             <artifactId>influxdb-java</artifactId>
             <version>2.19</version>
