--- a/SwebTest/src/main/resources/data.properties
+++ b/SwebTest/src/main/resources/data.properties
@@ -50,7 +50,7 @@ DEVICE_ASSIST_GSM = 18559230512
 #=================被测设备信息设置======================
 #网页登录用户名、密码
 LOGIN_USERNAME = admin
-LOGIN_PASSWORD = password
+LOGIN_PASSWORD = Yeastar202
 #LOGIN_PASSWORD = esi789*#
 #yes表示用admin权限的账户登入，no表示分机登入
 LOGIN_ADMIN = yes
