增加API GET方法，UI文案与元素关联

--- a/SwebTest/pom.xml
+++ b/SwebTest/pom.xml
@@ -525,6 +525,14 @@
             <version>0.1.54</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/top.jfunc.common/converter -->
+        <dependency>
+            <groupId>top.jfunc.common</groupId>
+            <artifactId>converter</artifactId>
+            <version>1.8.0</version>
+        </dependency>
+
+
     </dependencies>
 
     
