--- a/SwebTest/pom.xml
+++ b/SwebTest/pom.xml
@@ -359,6 +359,13 @@
     </build>
 
     <dependencies>
+        <!-- https://mvnrepository.com/artifact/org.assertj/assertj-core -->
+        <dependency>
+            <groupId>org.assertj</groupId>
+            <artifactId>assertj-core</artifactId>
+            <version>3.16.1</version>
+            <scope>test</scope>
+        </dependency>
 
         <dependency>
             <groupId>com.sun.mail </groupId>
