--- a/SwebTest/pom.xml
+++ b/SwebTest/pom.xml
@@ -80,7 +80,7 @@
                             <!--                    add usersystemclassloader for vm crash-->
                             <useSystemClassLoader>false</useSystemClassLoader>
                             <!--                    关闭并发-->
-                            <forkMode>once</forkMode>
+                            <forkMode>0</forkMode>
                             <!--                    <forkMode>once</forkMode>-->
                             <!--                    <forkCount>2.0C</forkCount>-->
                             <!--                    <parallel>methods</parallel>-->
