--- a/SwebTest/src/test/resources/testUserProperties/data.properties
+++ b/SwebTest/src/test/resources/testUserProperties/data.properties
@@ -97,11 +97,11 @@ DEVICE_TEST_GSM = null
 
 #网络磁盘设置--由于网络磁盘创建时网页传递给后台的参数是递增的，所以自动化执行时无法判断出是第几个建立的；可通过df查看是第几个，如果设备之前未创建过网络磁盘，则可以正常设置；
 #建议测试录音时使用外接存储设备，将NETWORK_DEVICE_NAME设置为“null”
-NETWORK_DEVICE_NAME = null
-NETWORK_DEVICE_IP = 192.168.3.5
-NETWORK_DEVICE_SHARE_NAME = record
-NETWORK_DEVICE_USER_NAME =
-NETWORK_DEVICE_USER_PASSWORD =
+NETWORK_DEVICE_NAME = 11.195
+NETWORK_DEVICE_IP = 192.168.11.195
+NETWORK_DEVICE_SHARE_NAME = tftp
+NETWORK_DEVICE_USER_NAME = yeastar
+NETWORK_DEVICE_USER_PASSWORD = q
 
 #录音存储设置：sharetest1、TF/SD、USB、HD
 DEVICE_RECORD_NAME = null
