adapt mutil screen

--- a/SwebTest/src/test/resources/config.properties
+++ b/SwebTest/src/test/resources/config.properties
@@ -12,3 +12,6 @@ isHighlighter = true
 
 # 是否录屏
 RECORD_VIDEO=true
+
+#chrome 分辨率 default 1920x1080   1366x768	1440x900 	1536x864	1600x900 	1680x1050	1920x1080	2560x1080	 2560x1440	2560 x 1600	2880 x 1800	3440x1440	3840x2160
+screenResolution = 1366x768
