[New Feature] screenResolutionUser

--- a/SwebTest/src/test/resources/data.properties
+++ b/SwebTest/src/test/resources/data.properties
@@ -24,12 +24,13 @@ RETRY_COUNT = 0
 
 AMI_LOG_FILE = AMI_log.txt
 
-
+#chrome 分辨率 default 1920x1080   1366x768	1440x900 	1536x864	1600x900 	1680x1050	1920x1080	2560x1080	 2560x1440	2560 x 1600	2880 x 1800	3440x1440	3840x2160
+#screenResolutionUser =
 
 #================辅助设备信息设置=====================
 
 #用于注册sip/iax trunk
-DEVICE_ASSIST_1 = 192.168.3.128
+DEVICE_ASSIST_1 = 192.168.3.125
 DEVICE_ASSIST_1_TYPE = SSeries
 #用于注册sps /spx trunk
 DEVICE_ASSIST_2 = 192.168.3.128
@@ -77,20 +78,20 @@ DEVICE_AMI_IP = 192.168.105.234
 AMI_PORT = 5038
 
 #VoIP线路名称自定义--可不修改，如果对应的外线不测试，将对应的名字设置为null；sip trunk 和sps trunk必须存在
-SIPTRUNK = SIP1
+SIPTRUNK = sipRegister
 SIPTRUNK2 = SIP2
 IAXTRUNK = IAX1
 SPS = SPS1
 SPX = SPX1
-ACCOUNTTRUNK = null
+ACCOUNTTRUNK = 6101Account
 
 #物理外线，都与辅助设备2对接，填的值看设备中继页面的name，如果物理外线不测试，将相应的值设置为null，PC或CloudPBX值必须设为null
-BRI_1 = BRI2-7
+BRI_1 = BRI1-7
 BRI_2 = null
 FXS_1 = 2-5
 #FXS_2 = 3-2
-FXO_1 = FXO1-3
-E1 = DIGIT3
+FXO_1 = FXO1-5
+E1 = DIGIT2
 GSM = null
 #被测设备的手机号
 DEVICE_TEST_GSM = null
