adapt gsm for extension

--- a/SwebTest/src/test/resources/testUserProperties/P127_data.properties
+++ b/SwebTest/src/test/resources/testUserProperties/P127_data.properties
@@ -91,9 +91,11 @@ FXS_1 = 2-5
 #FXS_2 = 3-2
 FXO_1 = FXO1-5
 E1 = DIGIT2
-GSM = null
+GSM = LTE1-1
 #被测设备的手机号
-DEVICE_TEST_GSM = null
+DEVICE_TEST_GSM = 15859219937
+#主叫设备的手机号
+DEVICE_TEST_GSM_CALLER = 15859250212
 
 #网络磁盘设置--由于网络磁盘创建时网页传递给后台的参数是递增的，所以自动化执行时无法判断出是第几个建立的；可通过df查看是第几个，如果设备之前未创建过网络磁盘，则可以正常设置；
 #建议测试录音时使用外接存储设备，将NETWORK_DEVICE_NAME设置为“null”
