1.add api ssh/speed 2.update initTrunk 3.modify test case 4.update time

--- a/SwebTest/pom.xml
+++ b/SwebTest/pom.xml
@@ -596,6 +596,13 @@
             <version>1.2</version>
         </dependency>
 
+
+        <dependency>
+            <groupId>cn.hutool</groupId>
+            <artifactId>hutool-all</artifactId>
+            <version>4.6.2</version>
+        </dependency>
+
     </dependencies>
 
     
