zjm,Preferences-Name Display Format自动化代码提交

--- a/SwebTest/src/test/resources/data.properties
+++ b/SwebTest/src/test/resources/data.properties
@@ -29,40 +29,40 @@ AMI_LOG_FILE = AMI_log.txt
 #================辅助设备信息设置=====================
 
 #用于注册sip/iax trunk
-DEVICE_ASSIST_1 = 192.168.3.125
-DEVICE_ASSIST_1_TYPE = SSeries
+DEVICE_ASSIST_1 = 192.168.7.132
+DEVICE_ASSIST_1_TYPE = PSeries
 #用于注册sps /spx trunk
-DEVICE_ASSIST_2 = 192.168.3.128
+DEVICE_ASSIST_2 = 192.168.7.131
 #用于注册account trunk
-DEVICE_ASSIST_3 = 192.168.3.124
+DEVICE_ASSIST_3 = 192.168.7.133
 UDP_PORT_ASSIST_1 = 5060
 UDP_PORT_ASSIST_2 = 5060
 UDP_PORT_ASSIST_3 = 5060
 #辅助2对应的手机号
-DEVICE_ASSIST_GSM = 15606924250
+#DEVICE_ASSIST_GSM =
 
 #=================P系列 被测设备信息设置======================
 #网页登录用户名、密码
 LOGIN_USERNAME = admin
 LOGIN_PASSWORD = Yeastar202
-EMAIL = yeastarautotest@163.com
+EMAIL = 1072807167@qq.com
 #LOGIN_PASSWORD = esi789*#
 #yes表示用admin权限的账户登入，no表示分机登入
 LOGIN_ADMIN = yes
 #被测设备产品名称命名  CloudPBX  PC  S100  S300  S412  S20  S50
-PRODUCT = S300
+PRODUCT = P570
 #主测设备的版本号
-VERSION = 30.13.0.34
+VERSION = 37.3.0.0
 
 #设置测试的浏览器：chrome、firefox、ie ；网页传输协议和端口号；Cloud默认端口号值为443
 BROWSER = chrome
 URL = https
 DEVICE_PORT = 8088
-DEVICE_IP_LAN = 192.168.3.127
-DEVICE_IP_WAN = 192.168.11.230
+DEVICE_IP_LAN = 192.168.7.130
+DEVICE_IP_WAN = 192.168.7.130
 DEVICE_IP_SUBNETMASK = 255.255.255.0
-DEVICE_IP_GATEWAY = 192.168.11.1
-DEVICE_IP_DNS = 192.168.3.1
+DEVICE_IP_GATEWAY = 192.168.7.1
+DEVICE_IP_DNS = 223.5.5.5
 UDP_PORT = 5060
 TCP_PORT = 5060
 TLS_PORT = 5061
@@ -73,7 +73,7 @@ HTTP_SERVER_IMAGE = http://192.168.11.195:1234//30.11.99.99.99.bin
 FIREFOX_PATH = D:\\Program Files (x86)\\Mozilla Firefox\\firefox.exe
 
 #AMI设置--Cloud需手动启用
-DEVICE_AMI_IP = 192.168.105.234
+DEVICE_AMI_IP =  192.168.7.130
 AMI_PORT = 5038
 
 #VoIP线路名称自定义--可不修改，如果对应的外线不测试，将对应的名字设置为null；sip trunk 和sps trunk必须存在
@@ -86,10 +86,10 @@ ACCOUNTTRUNK = 6700Account
 
 #物理外线，都与辅助设备2对接，填的值看设备中继页面的name，如果物理外线不测试，将相应的值设置为null，PC或CloudPBX值必须设为null
 BRI_1 = BRI1-7
-BRI_2 = null
+BRI_2 = BRI1-8
 FXS_1 = 2-5
 #FXS_2 = 3-2
-FXO_1 = FXO1-5
+FXO_1 = FXO1-3
 E1 = DIGIT2
 GSM = LTE1-1
 #被测设备的手机号
@@ -107,7 +107,6 @@ NETWORK_DEVICE_USER_PASSWORD = q
 
 #录音存储设置：sharetest1、TF/SD、USB、HD
 DEVICE_RECORD_NAME = null
-
 
 
 ##=================3.230---S50----=========================
@@ -147,7 +146,7 @@ DEVICE_RECORD_NAME = null
 #DEVICE_ASSIST_1 = 192.168.3.235
 ##用于注册sps /spx trunk
 #DEVICE_ASSIST_2 = 192.168.3.236
-#DEVICE_ASSIST_GSM = 18506938857
+DEVICE_ASSIST_GSM = 18506938857
 #DEVICE_TEST_GSM = 18450024021
 ##VoIP线路名称自定义--可不修改
 #SIPTRUNK = SIP1
