--- a/SwebTest/src/test/resources/data.properties
+++ b/SwebTest/src/test/resources/data.properties
@@ -28,21 +28,19 @@ AMI_LOG_FILE = AMI_log.txt
 #0为硬件设备，1为软件版，2为cloud版，默认情况下为0
 PSERIES_TYPE=0
 
-
 #================辅助设备信息设置=====================
-
 #用于注册sip/iax trunk
-DEVICE_ASSIST_1 = 192.168.3.125
-DEVICE_ASSIST_1_TYPE = SSeries
+DEVICE_ASSIST_1 = 192.168.32.142
+DEVICE_ASSIST_1_TYPE = PSeries
 #用于注册sps /spx trunk
-DEVICE_ASSIST_2 = 192.168.3.128
+DEVICE_ASSIST_2 = 192.168.32.138
 #用于注册account trunk
-DEVICE_ASSIST_3 = 192.168.3.124
+DEVICE_ASSIST_3 = 192.168.32.134
 UDP_PORT_ASSIST_1 = 5060
 UDP_PORT_ASSIST_2 = 5060
 UDP_PORT_ASSIST_3 = 5060
 #辅助2对应的手机号
-DEVICE_ASSIST_GSM = 15606924250
+DEVICE_ASSIST_GSM = null
 
 #=================P系列 被测设备信息设置======================
 #网页登录用户名、密码
@@ -61,7 +59,7 @@ VERSION = 30.13.0.34
 BROWSER = chrome
 URL = https
 DEVICE_PORT = 8088
-DEVICE_IP_LAN = 192.168.3.127
+DEVICE_IP_LAN = 192.168.32.140
 DEVICE_IP_WAN = 192.168.11.230
 DEVICE_IP_SUBNETMASK = 255.255.255.0
 DEVICE_IP_GATEWAY = 192.168.11.1
@@ -82,23 +80,23 @@ AMI_PORT = 5038
 #VoIP线路名称自定义--可不修改，如果对应的外线不测试，将对应的名字设置为null；sip trunk 和sps trunk必须存在
 SIPTRUNK = sipRegister
 SIPTRUNK2 = SIP2
-IAXTRUNK = IAX1
+IAXTRUNK = null
 SPS = SPS1
-SPX = SPX1
+SPX = null
 ACCOUNTTRUNK = 6700Account
 
 #物理外线，都与辅助设备2对接，填的值看设备中继页面的name，如果物理外线不测试，将相应的值设置为null，PC或CloudPBX值必须设为null
-BRI_1 = BRI1-7
+BRI_1 = null
 BRI_2 = null
-FXS_1 = 2-5
+FXS_1 = null
 #FXS_2 = 3-2
-FXO_1 = FXO1-5
-E1 = DIGIT2
-GSM = LTE1-1
+FXO_1 = null
+E1 = null
+GSM =null
 #被测设备的手机号
-DEVICE_TEST_GSM = 15859219937
+DEVICE_TEST_GSM =null
 #主叫设备的手机号
-DEVICE_TEST_GSM_CALLER = 15859250212
+DEVICE_TEST_GSM_CALLER =null
 
 #网络磁盘设置--由于网络磁盘创建时网页传递给后台的参数是递增的，所以自动化执行时无法判断出是第几个建立的；可通过df查看是第几个，如果设备之前未创建过网络磁盘，则可以正常设置；
 #建议测试录音时使用外接存储设备，将NETWORK_DEVICE_NAME设置为“null”
